# arrow-data-plane

./: .gitignore  README.md  build.gradle  pom.xml  settings.gradle
Java-FlightServer/: .gitignore  README.md  build.gradle  client.sh  deploy.sh  relay.sh  run_benchmark.sh  sample.py  server.sh  settings.gradle
Java-FlightServer/docker/: Dockerfile  clean.sh  create_docker_images.sh  run_client.sh  run_servers.sh
Java-wasm-allocator/: pom.xml
Java-wasm-allocator/src/main/org/m4d/adp/: WasmInterface.java
WasmAllocModule/: Cargo.toml  build.rs
WasmAllocModule/src/: lib.rs
WasmAllocator/: pom.xml
WasmAllocator/lib/: hello.wasm
buildSrc/src/main/groovy/: org.m4d.adp.java-application-conventions.gradle  org.m4d.adp.java-library-conventions.gradle
core/: pom.xml
core/src/main/rust/adp_core/: Cargo.toml
core/src/main/rust/adp_core/src/: allocator.rs  allocator_jni.rs  arch.rs  core.rs  core_jni.rs  lib.rs  types.rs
core/src/main/rust/wasm/allocator/: Cargo.toml  README.md
core/src/main/rust/wasm/allocator/src/: lib.rs
docker/: .gitignore  Dockerfile  Dockerfile.both-servers  Dockerfile.client  Dockerfile.memory-server  Dockerfile.relay-server  Dockerfile.relay-server2  alloc.wasm  clean.sh  create_docker_images.sh  create_relay_docker_image.sh  deploy.sh  deploy.yaml  filter.wasm  load_image.sh  run_both_servers.sh  run_client.sh  run_memory_server.sh  run_relay_server.sh  transformation.wasm
docker/deploy/: both.yaml  client.yaml  deploy.sh  memory.yaml  relay.yaml
draft-wasm-transform-use/: Cargo.toml  README.md
draft-wasm-transform-use/src/: main.rs
flight-client/: client.sh  pom.xml
flight-server/: build.gradle  fake.csv  generate_dataset.py  pom.xml  relay.sh  server.sh  transform_to_arrow.py
flight-server/org/m4d/adp/flight_server/: ExampleFlightServer.java  RelayProducer.java
gradleSkeleton/: settings.gradle
gradleSkeleton/app/: build.gradle
gradleSkeleton/java-wasm-allocator/: build.gradle
gradleSkeleton/list/: build.gradle
gradleSkeleton/utilities/: build.gradle
ipc/: build.gradle
java-wasm-allocator/: build.gradle
java-wasm-interface/: build.gradle
jni_interface/: Cargo.toml
jni_interface/src/: allocator.rs  allocator_jni.rs  lib.rs  types.rs
record-batch-jni/: Makefile
record-batch-jni/Java/: Makefile
record-batch-jni/Java/jni_lib/: Makefile  pom.xml
record-batch-jni/Java/jni_lib/lib/: ArrowJNIAdapter.h
record-batch-jni/Rust/: Makefile
record-batch-jni/Rust/jni_lib/: Cargo.toml  Makefile
record-batch-jni/Rust/jni_lib/src/: exporter.rs  lib.rs
wasm-fybrik-module/: Makefile  README.md  fybrikapplication.yaml  wasm-fybrik-module.yaml
wasm-fybrik-module/sample_assets/: assetFake.yaml  policy-filter18.rego  policy-filter22.rego  redact-policy.rego  sample-policy-filter.rego  sample-policy-filter2.rego
wasm-fybrik-module/wasm-fybrik-module/: Chart.yaml  values.yaml
wasm-fybrik-module/wasm-fybrik-module/charts/afm/: values.yaml
wasm-fybrik-module/wasm-fybrik-module/charts/afm/files/: conf.yaml
wasm-fybrik-module/wasm-fybrik-module/charts/afm/templates/: configmap.yaml  service.yaml
wasm-fybrik-module/wasm-fybrik-module/files/: conf.yaml
wasm-fybrik-module/wasm-fybrik-module/templates/: NOTES.txt  _helpers.tpl  client.yaml  memory.yaml  relay_server.yaml
wasm-fybrik-module/wasm-fybrik-module/templates/tests/: test-connection.yaml
wasm-modules/allocator/: Cargo.toml  README.md  build.gradle
wasm-modules/allocator/src/: lib.rs
wasm-modules/filter/: Cargo.toml  build.rs
wasm-modules/filter/src/: lib.rs
wasm-modules/transform/: Cargo.toml  build.gradle
wasm-modules/transform/src/: lib.rs
wasm-modules/transformation/: Cargo.toml
wasm-modules/transformation/src/: lib.rs
wasm/transformer/: Cargo.toml
wasm/transformer/src/: allocator.rs  array.rs  common.rs  lib.rs  schema.rs  transform.rs
wasm_interface/: .gitignore  Cargo.toml  Makefile  build.gradle
wasm_interface/src/: allocator.rs  allocator_jni.rs  converter.rs  lib.rs  oci_cache.rs  transformer.rs  transformer_jni.rs  types.rs
(+64 files in other folders)
