[package]
name = "alloc"
version = "0.1.0"
authors = ["Mohammad-nassar10 <mohammad.nassar@ibm.com>"]
edition = "2018"
#build = "build.rs"
#rustc-link-arg = "--import-memory"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
#arrow = {path = "../arrow-rs/arrow"}
#wasm-bindgen = "0.2.73"
#wasm-bindgen-futures = "0.4.16"
#wasmer = "1.0"



