cargo-features = ["edition2021"]
[package]
name = "wasm_interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
cached = "0.25.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = {version = "1.0", features = ["derive"]}
serde_yaml = {version = "0.8.21"}
serde_json = "1.0"
tokio = { version  = "1.0", features = ["macros", "fs"] }
oci-distribution = { git = "https://github.com/krustlet/krustlet" , tag = "v1.0.0-alpha.1" }
#wasmer = "2.0"
#wasmer-wasi = "2.0"
libc = "0.2.7"
jni = "0.19.0"
wasmtime = "0.31.0"
wasmtime-wasi = "0.31.0"

[dev-dependencies]
rstest = "0.6"
env_logger = "0.8"