[package]
name = "alloc"
version = "0.1.0"
authors = ["Mohammad-nassar10 <mohammad.nassar@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
arrow = "4.0.0"
wasm-gc-api = "0.1.11"



