[package]
name = "alloc"
version = "0.1.0"
authors = ["Mohammad-nassar10 <mohammad.nassar@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "5.1.0", default-features = false, features = ["ipc"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"