[package]
name = "transformation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = {version = "5.1.0", default-features = false, features = ["ipc"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"