[package]
name = "transformer"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
arrow = { path = "/home/roee88/arrow-repos/arrow-rs/arrow", default-features = false, features = ["simd", "prettyprint"]}

[patch.crates-io]
prettytable-rs = { git = "https://github.com/phsym/prettytable-rs", branch = "master"}
